--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?5302">
-	<link rel="stylesheet" type="text/css" href="style.css?5463">
-	<link rel="stylesheet" type="text/css" href="./css/animate.min.css?7266">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?202">
+	<link rel="stylesheet" type="text/css" href="style.css?395">
+	<link rel="stylesheet" type="text/css" href="./css/animate.min.css?5168">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
 	
     <title>Home</title>
@@ -86,22 +86,43 @@
 									<a href="#" class="dropdown-toggle nav-link  ltc-black" data-toggle="dropdown" aria-expanded="false">Contents</a>
 									<ul class="dropdown-menu" role="menu">
 										<li class="nav-item">
-											<a href="#" class="nav-link  ltc-black" data-scroll-speed="1000" onclick="scrollToTarget('#rsa-landscape',this)">Ethics</a>
+											<a href="#" class="nav-link  ltc-black" data-scroll-speed="1000" onclick="scrollToTarget('#rsa-desk',this)">Ethics</a>
 										</li>
 										<li class="nav-item">
-											<a href="#" class="nav-link  ltc-black" data-scroll-speed="1000" onclick="scrollToTarget('#data-access-map',this)">Data access map</a>
+											<a href="#" class="nav-link  ltc-black" data-scroll-speed="1000" onclick="scrollToTarget('#nav-data-sharing',this)">Data sharing</a>
 										</li>
 										<li class="nav-item">
-											<a href="#" class="nav-link  ltc-black" data-scroll-speed="1000" onclick="scrollToTarget('#data-trusts',this)">Data trusts</a>
+											<a href="#" class="nav-link  ltc-black" data-scroll-speed="1000" onclick="scrollToTarget('#toolkit-text-desk-',this)">Toolkit</a>
 										</li>
 										<li class="nav-item">
-											<a href="#" class="nav-link  ltc-black" data-scroll-speed="1000" onclick="scrollToTarget('#nav-innovation-',this)">Innovation</a>
+											<a href="#" class="nav-link  ltc-black" data-scroll-speed="1000" onclick="scrollToTarget('#bloc-46',this)">R&amp;D</a>
 										</li>
 										<li class="nav-item">
-											<a href="#" class="nav-link  ltc-black" data-scroll-speed="1000" onclick="scrollToTarget('#training',this)">Training</a>
+											<a href="#" class="nav-link  ltc-black" data-scroll-speed="1000" onclick="scrollToTarget('#innovation-hero-desk',this)">Innovation</a>
 										</li>
 										<li class="nav-item">
-											<a href="#" class="nav-link  ltc-black" data-scroll-speed="1000" onclick="scrollToTarget('#financials',this)">Financials</a>
+											<a href="#" class="nav-link  ltc-black" data-scroll-speed="1000" onclick="scrollToTarget('#bloc-46',this)">Private sector</a>
+										</li>
+										<li class="nav-item">
+											<a href="#" class="nav-link  ltc-black" data-scroll-speed="1000" onclick="scrollToTarget('#training-desk-hero',this)">Training</a>
+										</li>
+										<li class="nav-item">
+											<a href="#" class="nav-link  ltc-black" data-scroll-speed="1000" onclick="scrollToTarget('#member-hero',this)">Membership</a>
+										</li>
+										<li class="nav-item">
+											<a href="#" class="nav-link  ltc-black" data-scroll-speed="1000" onclick="scrollToTarget('#collab-mob-hero',this)">collaborations</a>
+										</li>
+										<li class="nav-item">
+											<a href="#" class="nav-link  ltc-black" data-scroll-speed="1000" onclick="scrollToTarget('#thoughtlead-desk-hero',this)">Thought leadership</a>
+										</li>
+										<li class="nav-item">
+											<a href="#" class="nav-link  ltc-black" data-scroll-speed="1000" onclick="scrollToTarget('#summit-hero-carousel',this)">ODI Summit</a>
+										</li>
+										<li class="nav-item">
+											<a href="#" class="nav-link  ltc-black" data-scroll-speed="1000" onclick="scrollToTarget('#dac-hero-desk',this)">Data as Culture</a>
+										</li>
+										<li class="nav-item">
+											<a href="#" class="nav-link  ltc-black" data-scroll-speed="1000" onclick="scrollToTarget('#financials-desk',this)">Financials</a>
 										</li>
 									</ul>
 								</div>
@@ -222,8 +243,8 @@
 </div>
 <!-- jeni-intro-mob END -->
 
-<!-- bloc-7 -->
-<div class="bloc image-bloc-mobile bgc-saffron b-parallax bloc-fill-screen d-lg-flex   d-none bg-49059105338-680d2cb9ca-o l-bloc" id="bloc-7">
+<!-- vision-desk -->
+<div class="bloc image-bloc-mobile bgc-saffron b-parallax bloc-fill-screen d-lg-flex   d-none bg-49059105338-680d2cb9ca-o l-bloc" id="vision-desk">
 	<div class="container">
 		<div class="row">
 			<div class="col-12">
@@ -234,10 +255,10 @@
 		</div>
 	</div>
 </div>
-<!-- bloc-7 END -->
+<!-- vision-desk END -->
 
-<!-- bloc-8 -->
-<div class="bloc bgc-isabelline l-bloc" id="bloc-8">
+<!-- contents-desk -->
+<div class="bloc bgc-isabelline l-bloc" id="contents-desk">
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-md-4 col-lg-12">
@@ -313,10 +334,10 @@
 		</div>
 	</div>
 </div>
-<!-- bloc-8 END -->
+<!-- contents-desk END -->
 
-<!-- bloc-9 -->
-<div class="bloc image-bloc-mobile bgc-saffron b-parallax bloc-fill-screen d-lg-flex   d-none bg-49059110828-c9cbe2151d-o l-bloc" id="bloc-9">
+<!-- mission-desk -->
+<div class="bloc image-bloc-mobile bgc-saffron b-parallax bloc-fill-screen d-lg-flex   d-none bg-49059110828-c9cbe2151d-o l-bloc" id="mission-desk">
 	<div class="container">
 		<div class="row">
 			<div class="col-12">
@@ -327,7 +348,7 @@
 		</div>
 	</div>
 </div>
-<!-- bloc-9 END -->
+<!-- mission-desk END -->
 
 <!-- engagement-ethics-mob -->
 <div class="bloc none full-width-bloc header-explore-margin d-lg-none d-xl-none d-flex bgc-cotton-candy tc-palatinate-blue l-bloc" id="engagement-ethics-mob">
@@ -692,8 +713,8 @@
 </div>
 <!-- nav-data-sharing END -->
 
-<!-- bloc-31 -->
-<div class="bloc full-width-bloc bgc-palatinate-blue d-bloc" id="bloc-31">
+<!-- data-sharing-hero-dask -->
+<div class="bloc full-width-bloc bgc-palatinate-blue d-bloc" id="data-sharing-hero-dask">
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-12 offset-0 align-self-center">
@@ -704,7 +725,7 @@
 		</div>
 	</div>
 </div>
-<!-- bloc-31 END -->
+<!-- data-sharing-hero-dask END -->
 
 <!-- Bloc Group -->
 
@@ -752,7 +773,7 @@
 <!-- Bloc Group END -->
 
 <!-- data-access-mob-head -->
-<div class="bloc d-lg-none d-xl-none d-flex bgc-pear l-bloc" id="data-access-mob-head">
+<div class="bloc d-lg-none d-xl-none d-flex bgc-pear l-bloc " id="data-access-mob-head">
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-md-6 offset-lg-0 col-lg-12 align-self-center">
@@ -895,8 +916,8 @@
 <!-- Bloc Group -->
 <div class="bloc-group" id="data-trusts-2-desk">
 
-<!-- bloc-16 -->
-<div class="bloc none bg-double-image-data-trusts full-width-bloc bloc-fill-screen bloc-tile-2 d-lg-flex   d-none l-bloc" id="bloc-16">
+<!-- data-trust-2-desk -->
+<div class="bloc none bg-double-image-data-trusts full-width-bloc bloc-fill-screen bloc-tile-2 d-lg-flex   d-none l-bloc" id="data-trust-2-desk">
 	<div class="container">
 		<div class="row">
 			<div class="col-12">
@@ -904,7 +925,7 @@
 		</div>
 	</div>
 </div>
-<!-- bloc-16 END -->
+<!-- data-trust-2-desk END -->
 
 <!-- bloc-17 -->
 <div class="bloc none bgc-pear tc-palatinate-blue bloc-fill-screen d-lg-flex   d-none bloc-tile-2 l-bloc" id="bloc-17">
@@ -982,8 +1003,8 @@
 </div>
 <!-- data-trusts-2-mob-text END -->
 
-<!-- bloc-39 -->
-<div class="bloc bg-IMG-9816-ethics-canvas bloc-fill-screen b-parallax d-lg-flex   d-none l-bloc" id="bloc-39">
+<!-- ethics-canvas-hero -->
+<div class="bloc bg-IMG-9816-ethics-canvas bloc-fill-screen b-parallax d-lg-flex   d-none l-bloc" id="ethics-canvas-hero">
 	<div class="container">
 		<div class="row">
 			<div class="col">
@@ -991,15 +1012,15 @@
 		</div>
 	</div>
 </div>
-<!-- bloc-39 END -->
+<!-- ethics-canvas-hero END -->
 
 <!-- Bloc Group -->
 
 <!-- Bloc Group -->
 <div class="bloc-group d-lg-flex blocs-hidden-md blocs-hidden-sm d-none">
 
-<!-- bloc-40 -->
-<div class="bloc none full-width-bloc bloc-fill-screen bloc-tile-2 d-lg-flex   d-none bg-CABI-Data-Ecosystem-Mapping-workshop-20v2 l-bloc" id="bloc-40">
+<!-- toolkit-text-desk- -->
+<div class="bloc none full-width-bloc bloc-fill-screen bloc-tile-2 d-lg-flex   d-none bg-CABI-Data-Ecosystem-Mapping-workshop-20v2 l-bloc" id="toolkit-text-desk-">
 	<div class="container">
 		<div class="row">
 			<div class="col-12">
@@ -1007,10 +1028,10 @@
 		</div>
 	</div>
 </div>
-<!-- bloc-40 END -->
+<!-- toolkit-text-desk- END -->
 
-<!-- bloc-41 -->
-<div class="bloc none bloc-fill-screen d-lg-flex   d-none bloc-tile-2 bgc-caribbean-green tc-white d-bloc" id="bloc-41">
+<!-- toolkit-img-desk -->
+<div class="bloc none bloc-fill-screen d-lg-flex   d-none bloc-tile-2 bgc-caribbean-green tc-white d-bloc" id="toolkit-img-desk">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6 offset-lg-0 col-lg-12 align-self-start margin-bottom">
@@ -1034,7 +1055,7 @@
 		</div>
 	</div>
 </div>
-<!-- bloc-41 END -->
+<!-- toolkit-img-desk END -->
 </div>
 <!-- Bloc Group END -->
 
@@ -1344,8 +1365,8 @@
 </div>
 <!-- innovation-mob-hero END -->
 
-<!-- bloc-58 -->
-<div class="bloc full-width-bloc d-lg-flex   d-none bgc-purple-heart d-bloc" id="bloc-58">
+<!-- innovation-hero-desk -->
+<div class="bloc full-width-bloc d-lg-flex   d-none bgc-purple-heart d-bloc" id="innovation-hero-desk">
 	<div class="container ">
 		<div class="row header-explore-margin d-lg-flex   d-none">
 			<div class="col-md-6 col-lg-3 align-self-center offset-lg-0">
@@ -1361,7 +1382,7 @@
 		</div>
 	</div>
 </div>
-<!-- bloc-58 END -->
+<!-- innovation-hero-desk END -->
 
 <!-- bloc-59 -->
 <div class="bloc tc-white bgc-purple-heart d-lg-flex   d-none d-bloc" id="bloc-59">
@@ -1699,7 +1720,7 @@
 					We worked with a range of private-sector organisations to help them&nbsp;<span class="span-bold colour-text-grey">make better use of data</span>&nbsp;across sectors such as&nbsp;<span class="span-bold colour-text-black">finance,</span>&nbsp;&nbsp;<span class="span-bold colour-text-black">retail</span>&nbsp;and the&nbsp;<span class="span-bold colour-text-grey">built environment.</span><br><br>The ODI Commercial Partnership programme enables us to connect organisations across different sectors, who share a&nbsp;<span class="span-bold colour-text-grey">common vision of a collaborative and open future</span>.<br>
 				</p>
 			</div>
-			<div class="col-md-6 offset-lg-0 col-lg-12 align-self-start margin-top">
+			<div class="col-md-6 offset-lg-0 col-lg-12 margin-top align-self-end">
 				<h1 class="mg-md navigation-header text-lg-center text-center tc-black">
 					<a class="link-style-explore ltc-black" href="https://theodi.org/service/business-data-sharing/" target="_blank">Explore</a><br>
 				</h1>
@@ -2442,8 +2463,8 @@
 </div>
 <!-- quote-mob-google END -->
 
-<!-- bloc-105 -->
-<div class="bloc full-width-bloc b-parallax d-lg-flex   d-none l-bloc" id="bloc-105">
+<!-- summit-hero-carousel -->
+<div class="bloc full-width-bloc b-parallax d-lg-flex   d-none l-bloc" id="summit-hero-carousel">
 	<div class="container ">
 		<div class="row voffset-clear-xs no-gutters">
 			<div class="col-12">
@@ -2523,7 +2544,7 @@
 		</div>
 	</div>
 </div>
-<!-- bloc-105 END -->
+<!-- summit-hero-carousel END -->
 
 <!-- Bloc Group -->
 
@@ -2690,7 +2711,7 @@
 <!-- Bloc Group -->
 
 <!-- Bloc Group -->
-<div class="bloc-group d-lg-flex blocs-hidden-md blocs-hidden-sm d-none">
+<div class="bloc-group blocs-hidden-lg blocs-hidden-md blocs-hidden-sm d-none">
 
 <!-- bloc-113 -->
 <div class="bloc none bloc-fill-screen bloc-tile-2 d-lg-flex   d-none bgc-bright-pink tc-white d-bloc" id="bloc-113">
@@ -2728,6 +2749,45 @@
 </div>
 <!-- Bloc Group END -->
 
+<!-- dac-hero-desk -->
+<div class="bloc bloc-fill-screen b-parallax bg-DoxBox0819-hero-2 d-bloc" id="dac-hero-desk">
+	<div class="container">
+		<div class="row">
+			<div class="col">
+				<img src="img/lazyload-ph.png" data-src="img/Asset%2019.svg" class="img-fluid mx-auto d-block lazyload" alt="Asset%2019" />
+			</div>
+		</div>
+	</div>
+</div>
+<!-- dac-hero-desk END -->
+
+<!-- bloc-115 -->
+<div class="bloc bloc-fill-screen bgc-carnation-pink l-bloc dac-bg- b-parallax tc-white" id="bloc-115">
+	<div class="container">
+		<div class="row row-style">
+			<div class="col-12 offset-lg-11 col-lg-12">
+				<h1 class="mg-md navigation-header text-lg-center margin-bottom tc-rose-bonbon">
+					data as culture
+				</h1>
+				<h1 class="mg-lg h2-feature-title-style tc-rose-bonbon">
+					We&nbsp;<span class="colour-text-white">engaged diverse audiences</span>&nbsp;with our art programme
+				</h1>
+				<p class="mg-clear p-3-style-">
+					Data as Culture is the ODI&rsquo;s world-class contemporary art programme, with work by artists who explore data critically and materially. <br><br>In 2019, new artworks were introduced as part of the Copy That? Surplus Data in an Age of Repetitive Duplication – the ODI&rsquo;s research and partnership season for 2019–2020.<br><br>Copy That? asks: how ‘true&rsquo; is the ‘data you&rsquo; and how many versions exist online? From the myth of the perfect digital copy to the benefits and pitfalls of simulation, we question the purpose and trustworthiness of incessantly reproduced data.<br><br>We showcased key pieces at the summit, using art to explore and bring to life some of the more complex and thought-provoking elements of data.<br>
+				</p>
+				<h1 class="mg-md navigation-header text-lg-center margin-top tc-rose-bonbon">
+					<a class="link-style-explore ltc-palatinate-blue" href="https://theodi.org/event/odi-summit-2019/" target="_blank">EXPLORE</a><br>
+				</h1>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col">
+			</div>
+		</div>
+	</div>
+</div>
+<!-- bloc-115 END -->
+
 <!-- Bloc Group -->
 
 <!-- Bloc Group -->
@@ -2754,9 +2814,9 @@
 <!-- bloc-115 END -->
 
 <!-- bloc-116 -->
-<div class="bloc none bloc-fill-screen bloc-tile-2 d-lg-flex   d-none doxbox-bg l-bloc" id="bloc-116">
+<div class="bloc none bloc-fill-screen bloc-tile-2 d-lg-flex   d-none bg-ODI-Alistair-Gentry-DoxBox-trustbot-Credit-Andrea-Capello-DoxBox-trustbot--70-small d-bloc" id="bloc-116">
 	<div class="container">
-		<div class="row">
+		<div class="row align-items-end">
 			<div class="col-12">
 			</div>
 		</div>
@@ -2772,7 +2832,7 @@
 <div class="bloc-group d-lg-flex blocs-hidden-md blocs-hidden-sm d-none">
 
 <!-- bloc-117 -->
-<div class="bloc none bloc-fill-screen bloc-tile-2 d-lg-flex   d-none dac-bg b-parallax bgc-royal-purple tc-purple-heart l-bloc" id="bloc-117">
+<div class="bloc none bloc-fill-screen bloc-tile-2 d-lg-flex   d-none b-parallax bgc-royal-purple tc-purple-heart l-bloc dac-bg-purple" id="bloc-117">
 	<div class="container">
 		<div class="row">
 			<div class="col-12 col-lg-10 offset-lg-1">
@@ -3083,8 +3143,8 @@
 <!-- Bloc Group -->
 <div class="bloc-group d-lg-flex blocs-hidden-md blocs-hidden-sm d-none">
 
-<!-- bloc-114 -->
-<div class="bloc none bloc-tile-2 bg-membership-20graphic-2x bloc-fill-screen d-lg-flex   d-none l-bloc" id="bloc-114">
+<!-- member-hero -->
+<div class="bloc none bloc-tile-2 bg-membership-20graphic-2x bloc-fill-screen d-lg-flex   d-none l-bloc" id="member-hero">
 	<div class="container">
 		<div class="row">
 			<div class="col-12">
@@ -3092,7 +3152,7 @@
 		</div>
 	</div>
 </div>
-<!-- bloc-114 END -->
+<!-- member-hero END -->
 
 <!-- bloc-115 -->
 <div class="bloc none bloc-tile-2 bg-membership bloc-fill-screen d-lg-flex   d-none l-bloc" id="bloc-115">
@@ -3252,8 +3312,8 @@
 </div>
 <!-- financials-mob END -->
 
-<!-- bloc-137 -->
-<div class="bloc manifesto-bg tc-black l-bloc " id="bloc-137">
+<!-- manifesto -->
+<div class="bloc manifesto-bg tc-black l-bloc" id="manifesto">
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="offset-lg-0 offset-md-0 col-lg-12 bloc-margin-bottom col-md-12">
@@ -3317,10 +3377,10 @@
 		</div>
 	</div>
 </div>
-<!-- bloc-137 END -->
+<!-- manifesto END -->
 
-<!-- bloc-72 -->
-<div class="bloc bloc-fill-screen bgc-bright-pink d-bloc" id="bloc-72">
+<!-- end -->
+<div class="bloc bloc-fill-screen bgc-bright-pink d-bloc" id="end">
 	<div class="container">
 		<div class="row">
 			<div class="col">
@@ -3329,20 +3389,20 @@
 		</div>
 	</div>
 </div>
-<!-- bloc-72 END -->
+<!-- end END -->
 
 </div>
 <!-- Main container END -->
     
 
 <!-- Additional JS -->
-<script src="./js/jquery-3.3.1.min.js?5920"></script>
-<script src="./js/bootstrap.bundle.min.js?2669"></script>
-<script src="./js/blocs.min.js?8339"></script>
+<script src="./js/jquery-3.3.1.min.js?128"></script>
+<script src="./js/bootstrap.bundle.min.js?2057"></script>
+<script src="./js/blocs.min.js?4907"></script>
 <script src="./js/lazysizes.min.js" defer></script>
-<script src="./js/cocoen.min.js?214"></script>
-<script src="./js/textblock.min.js?9024"></script>
-<script src="./js/textbloc-bric-js.js?1320"></script>
+<script src="./js/cocoen.min.js?9937"></script>
+<script src="./js/textblock.min.js?1523"></script>
+<script src="./js/textbloc-bric-js.js?2428"></script>
 <!-- Additional JS END -->
 
 
