--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?6327">
-	<link rel="stylesheet" type="text/css" href="style.css?3077">
-	<link rel="stylesheet" type="text/css" href="./css/animate.min.css?233">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?9861">
+	<link rel="stylesheet" type="text/css" href="style.css?5696">
+	<link rel="stylesheet" type="text/css" href="./css/animate.min.css?6959">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
 	
     <title>Home</title>
@@ -278,7 +278,7 @@
 			</div>
 			<div class="col-md-4">
 				<h1 class="mg-md contents-nav tc-palatinate-blue">
-					<a class="contents-nav " href="#" data-scroll-speed="1000" onclick="scrollToTarget('#toolkit-text-desk-',this)">PUBLIC SERVICES TOOLKIT</a><br>
+					<a class="contents-nav" href="#" data-scroll-speed="1000" onclick="scrollToTarget('#toolkit-text-desk-',this)">PUBLIC SERVICES TOOLKIT</a><br>
 				</h1>
 			</div>
 			<div class="col-md-4">
@@ -680,7 +680,7 @@
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-12 align-self-center">
-				<h1 class="mg-md bold-stat tc-white mg-clear-xs">
+				<h1 class="mg-md bold-stat tc-white mg-clear-xs ">
 					350k
 				</h1>
 				<p class="text-lg-center summit-stat-label mg-clear-xs">
@@ -1634,7 +1634,7 @@
 					Additional jobs created <br>by Data Pitch startups and SMEs<br>
 				</h6>
 			</div>
-			<div class="col-12 col-lg-7 col-md-10 offset-md-1">
+			<div class="col-12 col-md-10 offset-md-1 col-lg-7 offset-lg-0">
 				<h1 class="mg-md member-stat h1-14-style animated zoomIn animDelay06 tc-purple-heart" data-appear-anim-style="zoomIn">
 					€22.4m
 				</h1>
@@ -1851,7 +1851,7 @@
 					</div><a class="carousel-nav-controls carousel-control-prev" href="#carousel-17451" role="button" data-slide="prev"><span class="fa fa-chevron-left"></span><span class="sr-only">Previous</span></a><a class="carousel-nav-controls carousel-control-next" href="#carousel-17451" role="button" data-slide="next"><span class="fa fa-chevron-right"></span><span class="sr-only">Next</span></a>
 				</div>
 			</div>
-			<div class="col-lg-10 offset-lg-1 col-md-10 offset-md-1 margin-top">
+			<div class="col-md-10 offset-md-1 margin-top col-lg-8 offset-lg-2">
 				<p class="p-3-style- margin-top">
 					<span class="span-bold">Arup</span>&nbsp;is an independent firm working across every aspect of today&rsquo;s built environment. In 2019 we strengthened our partnership and explored how data can improve people&rsquo;s experience of cities and the built environment, with the aim to capture and share best practice, success stories and lessons learned.<br><br><span class="span-bold">Deutsche Bank AG</span>&nbsp;is a global multinational investment bank and financial services company. In 2019 we continued our partnership, building on previous stakeholder research to help identify, test and implement solutions to make data more accessible and open, and transform organisational culture.<br><br><span class="span-bold">Pinsent Masons</span>&nbsp;is an international law firm that joined our commercial partnership programme in 2019. The partnership builds on our past joint work alongside the Office for AI on the data trusts pilot project. We are now working with Pinsent Masons to explore the next stage in the evolution of data trusts.<br><br><span class="span-bold">Refinitiv</span>&nbsp;is one of the world&rsquo;s largest providers of real-time and historical financial market data. In 2019 we continued our work in partnership with Refinitiv to help in its mission to place trust in data at the core of its model, and to explore ‘alt data&rsquo; in the financial and investment sectors.<br><br><span class="span-bold">Co-op</span>&nbsp;is one of the world&rsquo;s largest consumer co-operatives. In 2019 we built on our partnership and worked closely with their data team to explore data protection and trust in data, focusing on integrity, transparency and meaningful consent.<br>
 				</p>
@@ -3410,13 +3410,13 @@
     
 
 <!-- Additional JS -->
-<script src="./js/jquery-3.3.1.min.js?3612"></script>
-<script src="./js/bootstrap.bundle.min.js?6666"></script>
-<script src="./js/blocs.min.js?9427"></script>
+<script src="./js/jquery-3.3.1.min.js?6172"></script>
+<script src="./js/bootstrap.bundle.min.js?747"></script>
+<script src="./js/blocs.min.js?5513"></script>
 <script src="./js/lazysizes.min.js" defer></script>
-<script src="./js/cocoen.min.js?5680"></script>
-<script src="./js/textblock.min.js?8393"></script>
-<script src="./js/textbloc-bric-js.js?7577"></script>
+<script src="./js/cocoen.min.js?8267"></script>
+<script src="./js/textblock.min.js?3546"></script>
+<script src="./js/textbloc-bric-js.js?2101"></script>
 <!-- Additional JS END -->
 
 
