--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?9861">
-	<link rel="stylesheet" type="text/css" href="style.css?5696">
-	<link rel="stylesheet" type="text/css" href="./css/animate.min.css?6959">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?7339">
+	<link rel="stylesheet" type="text/css" href="style.css?6618">
+	<link rel="stylesheet" type="text/css" href="./css/animate.min.css?6323">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
 	
     <title>Home</title>
@@ -680,7 +680,7 @@
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-12 align-self-center">
-				<h1 class="mg-md bold-stat tc-white mg-clear-xs ">
+				<h1 class="mg-md bold-stat tc-white mg-clear-xs">
 					350k
 				</h1>
 				<p class="text-lg-center summit-stat-label mg-clear-xs">
@@ -1704,16 +1704,16 @@
 <div class="bloc-group">
 
 <!-- bloc-107 -->
-<div class="bloc none bloc-fill-screen bloc-tile-2 d-lg-flex   d-none bgc-palatinate-blue tc-black d-bloc" id="bloc-107">
+<div class="bloc none bloc-fill-screen bloc-tile-2 d-lg-flex   d-none bgc-palatinate-blue d-bloc tc-white" id="bloc-107">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6 offset-lg-0 col-lg-12 align-self-start margin-bottom">
-				<h1 class="mg-md navigation-header text-lg-center text-center tc-black">
+				<h1 class="mg-md navigation-header text-lg-center text-center tc-white">
 					<span>Private sector</span><br>
 				</h1>
 			</div>
 			<div class="col-12 margin-top col-lg-10 offset-lg-1">
-				<h1 class="mg-md margin-bottom h1-med-comp text-center text-lg-left tc-black">
+				<h1 class="mg-md margin-bottom h1-med-comp text-center text-lg-left tc-white">
 					We partnered with companies&nbsp;<span class="colour-text-grey">transforming how they work</span>&nbsp;with data<br>
 				</h1>
 				<p class="mg-clear p-3-style- margin-bottom">
@@ -1721,8 +1721,8 @@
 				</p>
 			</div>
 			<div class="col-md-6 offset-lg-0 col-lg-12 margin-top align-self-end">
-				<h1 class="mg-md navigation-header text-lg-center text-center tc-black">
-					<a class="link-style-explore ltc-black" href="https://theodi.org/service/business-data-sharing/" target="_blank">Explore</a><br>
+				<h1 class="mg-md navigation-header text-lg-center text-center tc-white">
+					<a class="link-style-explore ltc-white " href="https://theodi.org/service/business-data-sharing/" target="_blank">Explore</a><br>
 				</h1>
 			</div>
 		</div>
@@ -3410,13 +3410,13 @@
     
 
 <!-- Additional JS -->
-<script src="./js/jquery-3.3.1.min.js?6172"></script>
-<script src="./js/bootstrap.bundle.min.js?747"></script>
-<script src="./js/blocs.min.js?5513"></script>
+<script src="./js/jquery-3.3.1.min.js?8575"></script>
+<script src="./js/bootstrap.bundle.min.js?9426"></script>
+<script src="./js/blocs.min.js?8518"></script>
 <script src="./js/lazysizes.min.js" defer></script>
-<script src="./js/cocoen.min.js?8267"></script>
-<script src="./js/textblock.min.js?3546"></script>
-<script src="./js/textbloc-bric-js.js?2101"></script>
+<script src="./js/cocoen.min.js?9149"></script>
+<script src="./js/textblock.min.js?5236"></script>
+<script src="./js/textbloc-bric-js.js?8598"></script>
 <!-- Additional JS END -->
 
 
