--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?7339">
-	<link rel="stylesheet" type="text/css" href="style.css?6618">
-	<link rel="stylesheet" type="text/css" href="./css/animate.min.css?6323">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?8709">
+	<link rel="stylesheet" type="text/css" href="style.css?6404">
+	<link rel="stylesheet" type="text/css" href="./css/animate.min.css?9328">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
 	
     <title>Home</title>
@@ -38,21 +38,42 @@
 					<div class="collapse navbar-collapse navbar-32585">
 						<ul class="site-navigation nav navbar-nav ml-auto my-menu">
 							<li class="nav-item">
-								<a href="#" class="nav-link" data-scroll-speed="1000" onclick="scrollToTarget('#engagement-ethics-mob',this)">Ethics</a>
+								<a href="#" class="nav-link" data-scroll-speed="1000" onclick="scrollToTarget('#engagement-ethics-mob',this)">Engagement &amp; Ethics</a>
 							</li>
 							<li class="nav-item">
-								<a href="#" class="nav-link" data-scroll-speed="1000" onclick="scrollToTarget('#data-access-mob-head',this)">Data access map</a>
+								<a href="#" class="nav-link" data-scroll-speed="1000" onclick="scrollToTarget('#data-sharing-hero-dask',this)">Data sharing</a>
 							</li>
 							<li class="nav-item">
-								<a href="#" class="nav-link" data-scroll-speed="1000" onclick="scrollToTarget('#data-trusts-mob-head',this)">Data trusts</a>
+								<a href="#" class="nav-link" data-scroll-speed="1000" onclick="scrollToTarget('#toolkit-mob-head',this)">Toolkit</a>
+							</li>
+							<li class="nav-item">
+								<a href="#" class="nav-link" data-scroll-speed="1000" onclick="scrollToTarget('#-r-d-mob-head',this)">R&amp;D</a>
 							</li>
 							<li class="nav-item">
 								<a href="#" class="nav-link" data-scroll-speed="1000" onclick="scrollToTarget('#innovation-mob-hero',this)">Innovation</a>
 							</li>
 							<li class="nav-item">
-								<a href="#" class="nav-link" data-scroll-speed="1000" onclick="scrollToTarget('#training-mob-hero',this)">Training</a>
+								<a href="#" class="nav-link" data-scroll-speed="1000" onclick="scrollToTarget('#private-mob-head',this)">Private sector</a>
 							</li>
 							<li class="nav-item">
+								<a href="#" class="nav-link" data-scroll-speed="1000" onclick="scrollToTarget('#training-mob-head',this)">Training</a>
+							</li>
+							<li class="nav-item">
+								<a href="#" class="nav-link" data-scroll-speed="1000" onclick="scrollToTarget('#member-mob-head',this)">Membership</a>
+							</li>
+							<li class="nav-item">
+								<a href="#" class="nav-link" data-scroll-speed="1000" onclick="scrollToTarget('#collab-mob-hero',this)">Collaborations</a>
+							</li>
+							<li class="nav-item">
+								<a href="#" class="nav-link" data-scroll-speed="1000" onclick="scrollToTarget('#thoughtlead-mob-head',this)">Thought leadership</a>
+							</li>
+							<li class="nav-item">
+								<a href="#" class="nav-link" data-scroll-speed="1000" onclick="scrollToTarget('#summit-mob-head',this)">ODI Summit</a>
+							</li>
+							<li class="nav-item">
+								<a href="#" class="nav-link" data-scroll-speed="1000" onclick="scrollToTarget('#dac-mob-head',this)">Data as Culture</a>
+							</li>
+							<li class="nav-item ">
 								<a href="#" class="nav-link" data-scroll-speed="1000" onclick="scrollToTarget('#financials-mob',this)">Financials</a>
 							</li>
 						</ul>
@@ -1722,7 +1743,7 @@
 			</div>
 			<div class="col-md-6 offset-lg-0 col-lg-12 margin-top align-self-end">
 				<h1 class="mg-md navigation-header text-lg-center text-center tc-white">
-					<a class="link-style-explore ltc-white " href="https://theodi.org/service/business-data-sharing/" target="_blank">Explore</a><br>
+					<a class="link-style-explore ltc-white" href="https://theodi.org/service/business-data-sharing/" target="_blank">Explore</a><br>
 				</h1>
 			</div>
 		</div>
@@ -3410,13 +3431,13 @@
     
 
 <!-- Additional JS -->
-<script src="./js/jquery-3.3.1.min.js?8575"></script>
-<script src="./js/bootstrap.bundle.min.js?9426"></script>
-<script src="./js/blocs.min.js?8518"></script>
+<script src="./js/jquery-3.3.1.min.js?3726"></script>
+<script src="./js/bootstrap.bundle.min.js?3804"></script>
+<script src="./js/blocs.min.js?850"></script>
 <script src="./js/lazysizes.min.js" defer></script>
-<script src="./js/cocoen.min.js?9149"></script>
-<script src="./js/textblock.min.js?5236"></script>
-<script src="./js/textbloc-bric-js.js?8598"></script>
+<script src="./js/cocoen.min.js?9505"></script>
+<script src="./js/textblock.min.js?8537"></script>
+<script src="./js/textbloc-bric-js.js?3365"></script>
 <!-- Additional JS END -->
 
 
