--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?8709">
-	<link rel="stylesheet" type="text/css" href="style.css?6404">
-	<link rel="stylesheet" type="text/css" href="./css/animate.min.css?9328">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?6728">
+	<link rel="stylesheet" type="text/css" href="style.css?2680">
+	<link rel="stylesheet" type="text/css" href="./css/animate.min.css?4736">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
 	
     <title>Home</title>
@@ -73,7 +73,7 @@
 							<li class="nav-item">
 								<a href="#" class="nav-link" data-scroll-speed="1000" onclick="scrollToTarget('#dac-mob-head',this)">Data as Culture</a>
 							</li>
-							<li class="nav-item ">
+							<li class="nav-item">
 								<a href="#" class="nav-link" data-scroll-speed="1000" onclick="scrollToTarget('#financials-mob',this)">Financials</a>
 							</li>
 						</ul>
@@ -2344,7 +2344,7 @@
 <div class="bloc-group d-lg-flex blocs-hidden-md blocs-hidden-sm d-none">
 
 <!-- member-hero -->
-<div class="bloc none bloc-tile-2 bg-membership-20graphic-2x bloc-fill-screen d-lg-flex   d-none l-bloc" id="member-hero">
+<div class="bloc none bloc-tile-2 bloc-fill-screen d-lg-flex   d-none bg-member-20logo d-bloc" id="member-hero">
 	<div class="container">
 		<div class="row">
 			<div class="col-12">
@@ -3014,13 +3014,13 @@
 					data as culture
 				</h1>
 				<h1 class="mg-lg h2-feature-title-style tc-rose-bonbon">
-					We&nbsp;<span class="colour-text-white">engaged diverse audiences</span>&nbsp;with our art programme
+					We&nbsp;<span class="colour-text-white ">engaged diverse audiences</span>&nbsp;with our art programme
 				</h1>
 				<p class="mg-clear p-3-style-">
 					Data as Culture is the ODI&rsquo;s world-class contemporary art programme, with work by artists who explore data critically and materially. <br><br>In 2019, new artworks were introduced as part of the Copy That? Surplus Data in an Age of Repetitive Duplication – the ODI&rsquo;s research and partnership season for 2019–2020.<br><br>Copy That? asks: how ‘true&rsquo; is the ‘data you&rsquo; and how many versions exist online? From the myth of the perfect digital copy to the benefits and pitfalls of simulation, we question the purpose and trustworthiness of incessantly reproduced data.<br><br>We showcased key pieces at the summit, using art to explore and bring to life some of the more complex and thought-provoking elements of data.<br>
 				</p>
 				<h1 class="mg-md navigation-header text-lg-center margin-top tc-rose-bonbon">
-					<a class="link-style-explore ltc-palatinate-blue" href="https://theodi.org/event/odi-summit-2019/" target="_blank">EXPLORE</a><br>
+					<a class="link-style-explore ltc-bright-pink" href="http://culture.theodi.org/copythat/" target="_blank">EXPLORE</a><br>
 				</h1>
 			</div>
 		</div>
@@ -3046,10 +3046,10 @@
 					doxbox trustbot
 				</h1>
 				<p class="mg-clear p-3-style-">
-					Created by Alistair Gentry, DoxBox trustbot is a hot-pink ‘puppet-robot-hybrid&rsquo; who<br>wants to chat. After taking centre stage in the main hall, delegates could visit DoxBox trustbot and decide how much information about themselves they were willing to share.<br>
+					Created by Alistair Gentry, DoxBox trustbot is a hot-pink ‘puppet-robot-hybrid&rsquo; who&nbsp;wants to chat. After taking centre stage in the main hall, delegates could visit DoxBox trustbot and decide how much information about themselves they were willing to share.<br>
 				</p>
 				<h1 class="mg-md navigation-header text-lg-center margin-top tc-bright-pink">
-					<a class="link-style-explore ltc-bright-pink" href="https://theodi.org/event/odi-summit-2019/" target="_blank">EXPLORE</a><br>
+					<a class="link-style-explore ltc-bright-pink" href="http://culture.theodi.org/doxbox/" target="_blank">EXPLORE</a><br>
 				</h1>
 			</div>
 		</div>
@@ -3087,7 +3087,7 @@
 					Mood Pinball – co-commissioned by Data as Culture and the University of Southampton Data Stories project. <br><br>Produced by BOM centre for art, technology&nbsp;and science, Birmingham, Mood Pinball playfully reimagines how city-wide data might be used by an individual to find their comfort zones, and improve their experience of a city.<br>
 				</p>
 				<h1 class="mg-md navigation-header text-lg-center margin-top tc-purple-heart">
-					<a class="link-style-explore ltc-purple-heart" href="https://theodi.org/event/odi-summit-2019/" target="_blank">EXPLORE</a><br>
+					<a class="link-style-explore ltc-purple-heart" href="http://culture.theodi.org/moodpinball/" target="_blank">EXPLORE</a><br>
 				</h1>
 			</div>
 		</div>
@@ -3125,7 +3125,7 @@
 					Mr Gee also presented his artwork, Bring Me My Fire Truck, an animation of William Blake&rsquo;s Jerusalem running through the 24 official languages of the European Union, plus Welsh, via Google Translate.<br>
 				</p>
 				<h1 class="mg-md navigation-header text-lg-center margin-top tc-white">
-					<a class="link-style-explore ltc-white" href="https://theodi.org/event/odi-summit-2019/" target="_blank">EXPLORE</a><br>
+					<a class="link-style-explore ltc-white" href="http://culture.theodi.org/firetruck/" target="_blank">EXPLORE</a><br>
 				</h1>
 			</div>
 		</div>
@@ -3214,7 +3214,7 @@
 					We engaged diverse audiences with our art programme<br>
 				</h1>
 				<p class="mg-clear p-3-style- margin-bottom margin-top">
-					Data as Culture is the ODI&rsquo;s world-class contemporary art programme, with work by artists who&nbsp;<span class="span-bold colour-text-blue">explore data critically and materially</span>. <br><br>In 2019, new artworks were introduced as part of the&nbsp;<a class="link-style colour-text-blue" href="http://culture.theodi.org/copythat/">Copy That? Surplus Data in an Age of Repetitive Duplication</a>&nbsp;– the ODI&rsquo;s research and partnership season for 2019–2020.<br><br>Copy That? asks: how ‘true&rsquo; is the ‘data you&rsquo; and how many versions exist online? From the myth of the perfect digital copy to the benefits and pitfalls of simulation, we question the purpose and trustworthiness of incessantly reproduced data.<br><br>We showcased key pieces at the summit, using art to explore and bring to life some of the more complex and thought-provoking elements of data.<br><br>Created by Alistair Gentry,&nbsp;<span class="span-bold colour-text-blue">DoxBox trustbot</span>&nbsp;is a hot-pink ‘puppet-robot-hybrid&rsquo; who wants to chat. After taking centre stage in the main hall, delegates could visit DoxBox trustbot and decide how much information about themselves they were willing to share.<br><br>We also exhibited&nbsp;<span class="span-bold colour-text-blue">Mood Pinball</span>&nbsp;– co-commissioned by Data as Culture and the University of Southampton Data Stories project. Produced by BOM centre for art, technology and science, Birmingham, Mood Pinball playfully reimagines how city-wide data might be used by an individual to find their comfort zones, and improve their experience of a city.<br><br>Mr Gee also presented his artwork,&nbsp;<span class="span-bold colour-text-blue">Bring Me My Fire Truck</span>&nbsp;an animation of William Blake&rsquo;s Jerusalem running through the 24 official languages of the European Union, plus Welsh, via Google Translate.<br>
+					Data as Culture is the ODI&rsquo;s world-class contemporary art programme, with work by artists who&nbsp;<span class="span-bold colour-text-blue">explore data critically and materially</span>. <br><br>In 2019, new artworks were introduced as part of the&nbsp;<a class="link-style ltc-palatinate-blue" href="http://culture.theodi.org/copythat/" target="_blank">Copy That? Surplus Data in an Age of Repetitive Duplication</a>&nbsp;– the ODI&rsquo;s research and partnership season for 2019–2020.<br><br>Copy That? asks: how ‘true&rsquo; is the ‘data you&rsquo; and how many versions exist online? From the myth of the perfect digital copy to the benefits and pitfalls of simulation, we question the purpose and trustworthiness of incessantly reproduced data.<br><br>We showcased key pieces at the summit, using art to explore and bring to life some of the more complex and thought-provoking elements of data.<br><br>Created by Alistair Gentry,&nbsp;<a class="link-style ltc-palatinate-blue" href="http://culture.theodi.org/doxbox/" target="_blank">DoxBox trustbot</a>&nbsp;is a hot-pink ‘puppet-robot-hybrid&rsquo; who wants to chat. After taking centre stage in the main hall, delegates could visit DoxBox trustbot and decide how much information about themselves they were willing to share.<br><br>We also exhibited&nbsp;<a class="ltc-palatinate-blue link-style" href="http://culture.theodi.org/moodpinball/" target="_blank">Mood Pinball</a>&nbsp;– co-commissioned by Data as Culture and the University of Southampton Data Stories project. Produced by BOM centre for art, technology and science, Birmingham, Mood Pinball playfully reimagines how city-wide data might be used by an individual to find their comfort zones, and improve their experience of a city.<br><br>Mr Gee also presented his artwork,&nbsp;<a class="ltc-palatinate-blue link-style" href="http://culture.theodi.org/firetruck/" target="_blank">Bring Me My Fire Truck</a>&nbsp;an animation of William Blake&rsquo;s Jerusalem running through the 24 official languages of the European Union, plus Welsh, via Google Translate.<br>
 				</p>
 			</div>
 			<div class="col-md-6 offset-lg-0 col-lg-12 align-self-start margin-top">
@@ -3431,13 +3431,13 @@
     
 
 <!-- Additional JS -->
-<script src="./js/jquery-3.3.1.min.js?3726"></script>
-<script src="./js/bootstrap.bundle.min.js?3804"></script>
-<script src="./js/blocs.min.js?850"></script>
+<script src="./js/jquery-3.3.1.min.js?7092"></script>
+<script src="./js/bootstrap.bundle.min.js?7385"></script>
+<script src="./js/blocs.min.js?5206"></script>
 <script src="./js/lazysizes.min.js" defer></script>
 <script src="./js/cocoen.min.js?9505"></script>
-<script src="./js/textblock.min.js?8537"></script>
-<script src="./js/textbloc-bric-js.js?3365"></script>
+<script src="./js/textblock.min.js?9561"></script>
+<script src="./js/textbloc-bric-js.js?8553"></script>
 <!-- Additional JS END -->
 
 
