--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?6728">
-	<link rel="stylesheet" type="text/css" href="style.css?2680">
-	<link rel="stylesheet" type="text/css" href="./css/animate.min.css?4736">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?1358">
+	<link rel="stylesheet" type="text/css" href="style.css?841">
+	<link rel="stylesheet" type="text/css" href="./css/animate.min.css?7584">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
 	
     <title>Home</title>
@@ -2344,7 +2344,7 @@
 <div class="bloc-group d-lg-flex blocs-hidden-md blocs-hidden-sm d-none">
 
 <!-- member-hero -->
-<div class="bloc none bloc-tile-2 bloc-fill-screen d-lg-flex   d-none bg-member-20logo d-bloc" id="member-hero">
+<div class="bloc none bloc-tile-2 bloc-fill-screen d-lg-flex   d-none bg-member-20bg-20v2 d-bloc " id="member-hero">
 	<div class="container">
 		<div class="row">
 			<div class="col-12">
@@ -3014,7 +3014,7 @@
 					data as culture
 				</h1>
 				<h1 class="mg-lg h2-feature-title-style tc-rose-bonbon">
-					We&nbsp;<span class="colour-text-white ">engaged diverse audiences</span>&nbsp;with our art programme
+					We&nbsp;<span class="colour-text-white">engaged diverse audiences</span>&nbsp;with our art programme
 				</h1>
 				<p class="mg-clear p-3-style-">
 					Data as Culture is the ODI&rsquo;s world-class contemporary art programme, with work by artists who explore data critically and materially. <br><br>In 2019, new artworks were introduced as part of the Copy That? Surplus Data in an Age of Repetitive Duplication – the ODI&rsquo;s research and partnership season for 2019–2020.<br><br>Copy That? asks: how ‘true&rsquo; is the ‘data you&rsquo; and how many versions exist online? From the myth of the perfect digital copy to the benefits and pitfalls of simulation, we question the purpose and trustworthiness of incessantly reproduced data.<br><br>We showcased key pieces at the summit, using art to explore and bring to life some of the more complex and thought-provoking elements of data.<br>
@@ -3431,13 +3431,13 @@
     
 
 <!-- Additional JS -->
-<script src="./js/jquery-3.3.1.min.js?7092"></script>
-<script src="./js/bootstrap.bundle.min.js?7385"></script>
-<script src="./js/blocs.min.js?5206"></script>
+<script src="./js/jquery-3.3.1.min.js?121"></script>
+<script src="./js/bootstrap.bundle.min.js?5237"></script>
+<script src="./js/blocs.min.js?841"></script>
 <script src="./js/lazysizes.min.js" defer></script>
-<script src="./js/cocoen.min.js?9505"></script>
-<script src="./js/textblock.min.js?9561"></script>
-<script src="./js/textbloc-bric-js.js?8553"></script>
+<script src="./js/cocoen.min.js?2420"></script>
+<script src="./js/textblock.min.js?6004"></script>
+<script src="./js/textbloc-bric-js.js?5663"></script>
 <!-- Additional JS END -->
 
 
